# elocalculator

./: docker-compose.local.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/rest/: post.rest
backend/src/: elo_calculator.py  main.py  models.py
backend/src/lib/: supabase.py
frontend/: .prettierrc  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: MatchForm.tsx  PlayerTable.tsx
frontend/src/lib/: matchService.tsx  types.ts
